Add stephanlensky keymap for Ergodox Ez

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,7 @@
     },
     "clangd.arguments": [
         "--header-insertion=never"
-    ]
+    ],
+    "makefile.configureOnOpen": false,
+    "editor.formatOnSave": false,
 }
